test/tests/operators/to_google_secops/ingestion_missing_credentials.txt
error: `private_key` is required when `api="ingestion"`
 --> tests/operators/to_google_secops/ingestion_missing_credentials.tql:6:37
  |
6 | to_google_secops _dry_run=true, api="ingestion", log_type="CUSTOM_DNS",
  |                                     ^^^^^^^^^^^ 
  |

error: `client_email` is required when `api="ingestion"`
 --> tests/operators/to_google_secops/ingestion_missing_credentials.tql:6:37
  |
6 | to_google_secops _dry_run=true, api="ingestion", log_type="CUSTOM_DNS",
  |                                     ^^^^^^^^^^^ 
  |

error: `customer_id` is required when `api="ingestion"`
 --> tests/operators/to_google_secops/ingestion_missing_credentials.tql:6:37
  |
6 | to_google_secops _dry_run=true, api="ingestion", log_type="CUSTOM_DNS",
  |                                     ^^^^^^^^^^^ 
  |
